# ai-video-studio

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f630fa410189_initial_schema_10_tables.py
docs/: PROJECT_CONTEXT.md  一、OpenAPI 3.0.3 Swagger 定义（MVP版）.md  产品定义.md  开发任务拆解.md  技术栈推荐选型.md  系统设计.md  系统设计2.md  迭代排期表.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: AgentChat.vue
frontend/src/components/ui/: StatusBadge.vue
frontend/src/router/: index.ts
frontend/src/stores/: projects.ts
frontend/src/types/: index.ts
frontend/src/views/: BriefView.vue  HomeView.vue  ProjectDetailView.vue  ProjectsView.vue  RenderView.vue  ScriptView.vue  StoryboardView.vue  TimelineView.vue
services/agent_workflow_service/app/agents/: audio_agent.py  character_agent.py  creative_agent.py  editing_agent.py  review_agent.py  script_agent.py  storyboard_agent.py  visual_agent.py
services/api_service/app/: main.py
services/api_service/app/api/: health.py
services/api_service/app/api/v1/: assets.py  audio.py  auth.py  briefs.py  projects.py  renders.py  scripts.py  shots.py  storyboards.py  tasks.py  timelines.py
services/api_service/app/schemas/: api_schemas.py
services/api_service/tests/: conftest.py  test_audio.py  test_briefs.py  test_common.py  test_e2e_pipeline.py  test_health.py  test_pipeline_endpoints.py  test_projects.py  test_renders.py  test_schemas.py  test_scripts.py  test_shots.py  test_storyboards.py  test_timelines.py
services/media_render_service/app/ffmpeg/: renderer.py
